--- a/app-frontend/package.json
+++ b/app-frontend/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "app-frontend": "file:",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.9",
@@ -19,9 +20,12 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "autoprefixer": "^10.4.20",
+    "css-loader": "^7.1.2",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^9.0.0",
     "postcss": "^8.5.3",
+    "sass-loader": "^16.0.5",
     "tailwindcss": "^4.0.9"
   },
   "eslintConfig": {
