--- a/app-frontend/package.json
+++ b/app-frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "app-frontend": "file:",
     "core-js": "^3.8.3",
+    "pinia": "^3.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0"
   },
@@ -23,8 +24,8 @@
     "css-loader": "^7.1.2",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "node-sass": "^9.0.0",
     "postcss": "^8.5.3",
+    "sass": "^1.85.1",
     "sass-loader": "^16.0.5",
     "tailwindcss": "^4.0.9"
   },
